--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,9 +8,5 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
-  "proseWrap": "always",
-  "files.associations": {
-    "*.xml": "html",
-    "*.svg": "html"
-}
+  "proseWrap": "always"
 }
